# markov

./: .gitignore  CMakeLists.txt  Dictionary.cpp  Dictionary.h  FileReader.cpp  FileReader.h  Generator.cpp  Generator.h  IFileReader.h  MarkovChain.cpp  MarkovChain.h  MarkovState.cpp  MarkovState.h  Notes.txt  StateRange.cpp  StateRange.h  TextSource.cpp  TextSource.h  Types.h  UnitTests.cpp  UnitTests.h  Util.cpp  Util.h  main.cpp  meson.build  readme.md  test notes.txt
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  configurations.xml  project.xml
src/: Dictionary.cpp  FileReader.cpp  FileReader.h  Generator.cpp  Generator.h  ITextSource.h  MarkovChain.h  StateRange.cpp  StateRange.h  TextBank.cpp  TextBank.h  UnitTests.cpp  UnitTests.h  Util.h  main.cpp
src/applib/: Dictionary.h  FileReader.cpp  FileReader.h  Generator.cpp  Generator.h  IFileReader.h  ITextSource.h  MarkovChain.cpp  MarkovChain.h  MarkovState.cpp  MarkovState.h  StateRange.cpp  StateRange.h  TextBank.cpp  TextBank.h  TextRenderer.cpp  TextRenderer.h  TextSource.cpp  Types.h  Util.cpp  Util.h
src/applib/util/: IProgressReporter.h  ParameterParser.cpp  ParameterParser.h  SerializeUtils.h  Timer.cpp  Timer.h
src/unittest/: UnitTests.cpp  UnitTests.h  unittestmain.cpp
src/util/: IProgressReporter.h  ParameterParser.h  SerializeUtils.cpp  Timer.cpp
